--- a/src/app/modules/deck-builder/library-builder/library-builder.component.html
+++ b/src/app/modules/deck-builder/library-builder/library-builder.component.html
@@ -75,7 +75,7 @@
       'col-8': (isMobileOrTablet$ | async) === false
     }" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" infiniteScrollContainer=".modal-body"
         [fromRoot]="true" [alwaysCallback]="true" (scrolled)="onScroll()">
-        @if ((library$ | async)!.length === 0) {
+        @if ((library$ | async)?.length === 0) {
         <div class="d-flex justify-content-center mt-2">
           <button type="button" class="btn btn-danger btn-lg" (click)="initFilters()">
             {{ t('reset_filters') }}
@@ -84,7 +84,7 @@
         }
         @if((displayMode$ |async) === 'grid') {
         <div class="row mx-2 mb-2 g-1 justify-content-center">
-          @for (library of (library$ | async)! ; track library.id) {
+          @for (library of library$ | async ; track library.id) {
           <div class="col-6 col-md-auto">
             <app-library-grid-card [card]="getCard(library)" [librarySize]="(librarySize$ | async)!"
               [withControls]="true" (cardAdded)="addCard($event)" (cardRemoved)="removeCard($event)" />
@@ -92,7 +92,7 @@
           }
         </div>
         }@else{
-        @for (library of (library$ | async)! ; track library.id) {
+        @for (library of library$ | async; track library.id) {
         <ul class="col list-group">
           <app-library [card]="getCard(library)" [librarySize]="(librarySize$ | async)!" [withControls]="true"
             (cardAdded)="addCard($event)" (cardRemoved)="removeCard($event)" />
