--- a/src/app/modules/deck-builder/builder.component.html
+++ b/src/app/modules/deck-builder/builder.component.html
@@ -106,7 +106,7 @@
               {{ t('save') }}
             </button>
             @if ((deckId$ | async)!!) {
-            <button type="button" class="btn btn-primary m-2" (click)="deleteDeck()">
+            <button type="button" class="btn btn-danger m-2" (click)="deleteDeck()">
               <i class="bi bi-trash-fill"></i>
               {{ t('delete') }}
             </button>
