feat: update modal fullscreen settings and increase page size for crypt and library components

--- a/src/app/modules/deck-builder/library-builder/library-builder.component.html
+++ b/src/app/modules/deck-builder/library-builder/library-builder.component.html
@@ -1,7 +1,7 @@
 <ng-container *transloco="let t; prefix: 'library_section'">
   <div class="modal-header">
     <h4 class="modal-title">{{ 'library_builder.title' | transloco }}</h4>
-    <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
+    <button type="button" class="btn-close me-2" [attr.aria-label]="'shared.close' | transloco"
       (click)="modal.dismiss()"></button>
 
   </div>
