--- a/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
+++ b/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
@@ -135,18 +135,6 @@
     <strong class="float-end">
       {{ t('results', { count: (resultsCount$ | async)! }) }}
     </strong>
-    <app-crypt-builder-filter [(printOnDemand)]="printOnDemand" (printOnDemandChange)="onChangePrintOnDemand($event)"
-      [(clans)]="clans" (clansChange)="onChangeClanFilter($event)" [(disciplines)]="disciplines"
-      (disciplinesChange)="onChangeDisciplineFilter($event)" [(superiorDisciplines)]="superiorDisciplines"
-      (superiorDisciplinesChange)="onChangeSuperiorDisciplineFilter($event)" [(groupSlider)]="groupSlider"
-      (groupSliderChange)="onChangeGroupSliderFilter($event)" [(capacitySlider)]="capacitySlider"
-      (capacitySliderChange)="onChangeCapacitySliderFilter($event)" [(title)]="title"
-      (titleChange)="onChangeTitleFilter($event)" [(sect)]="sect" (sectChange)="onChangeSectFilter($event)"
-      [(path)]="path" (pathChange)="onChangePathFilter($event)" [(taints)]="taints"
-      (taintsChange)="onChangeTaintsFilter($event)" [(cardText)]="cardText"
-      (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)"
-      [predefinedLimitedFormat]="predefinedLimitedFormat"
-      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" [artist]="artist"
-      (artistChange)="onChangeArtistFilter($event)" />
+    <app-crypt-builder-filter [filter]="cryptFilter" (filterChange)="onChangeCryptFilter($event)" />
   </ng-template>
 </ng-container>
