--- a/src/app/modules/deck-shared/crypt/crypt.component.html
+++ b/src/app/modules/deck-shared/crypt/crypt.component.html
@@ -1,7 +1,7 @@
 @if(crypt$ | async; as crypt){
 <!-- eslint-disable-next-line -->
-<a class="list-group-item list-group-item-action disable-select crypt-item" #popover="ngbPopover"
-  [disablePopover]="disablePopover" [ngbPopover]="imgPopover" triggers="mouseenter:mouseleave" container="body"
+<a class="list-group-item list-group-item-action disable-select" #popover="ngbPopover" [disablePopover]="disablePopover"
+  [ngbPopover]="imgPopover" triggers="mouseenter:mouseleave" container="body"
   (click)="disableClickPopover ? popover.close() : popover.open()" [ngStyle]="background && {
     background: 'url('+ cdnDomain + crypt.cropImage + ') scroll',
     'background-repeat': 'no-repeat',
@@ -35,20 +35,24 @@
   <div class="row align-items-center">
     <div class="col-6">
       <div class="row">
-        @if(withControls && (card.number || maxNumber)){
+        @if(withControls && (card.number || maxNumber || withDelete)){
         <div class="col-auto">
           <i class="btn-icon bi bi-fs-1_5x" [ngClass]="{
-              'bi-square btn-transparent': card.number <= 0,
-              'bi-x-square text-danger': card.number > 0 &&card.number <= 1,
-              'bi-dash-square': card.number > 1
+              'bi-x-square text-danger': card.number <= 0,
+              'bi-dash-square': card.number > 0
               }" aria-hidden="true" (click)="removeCard($event)"></i>
         </div>
         }
-        @if(!withDrawProbability && (card.number || maxNumber)){
+        @if(!withDrawProbability && (card.number || maxNumber || withDelete)){
         <div class="col-auto bg-primary-subtle deck_number h-100" [ngClass]="{
           'mt-2': withControls
         }">
-          {{ card.number }}@if(maxNumber){<span>/{{ maxNumber }}</span>}
+          @if(card.number || maxNumber){
+          {{ card.number }}
+          }
+          @if(maxNumber){
+          /
+          <span>{{ maxNumber }}</span>}
         </div>
         }
         @if(withControls){
