--- a/src/app/modules/deck-shared/crypt-grid-card/crypt-grid-card.component.html
+++ b/src/app/modules/deck-shared/crypt-grid-card/crypt-grid-card.component.html
@@ -51,7 +51,7 @@
       <i class="bi bi-plus-lg"></i>
     </button>
     <button type="button" class="btn btn-sm btn-danger flex-fill fs-6" (click)="removeCard($event)"
-      [disabled]="card().number === 0">
+      [disabled]="card().number === 0 && !withDelete()">
       <i class="bi bi-dash-lg"></i>
     </button>
   </div>
