feat: implement lazy loading for markdown rendering and add sanitization pipe

--- a/src/app/modules/deck-metagame/deck-metagame-card/deck-metagame-card.component.html
+++ b/src/app/modules/deck-metagame/deck-metagame-card/deck-metagame-card.component.html
@@ -41,7 +41,7 @@
     </h5>
     <h6 class="card-subtitle text-muted small">{{ archetype.type }}</h6>
   </div>
-  <div class="card-body d-flex flex-column text-muted small">
+  <div class="card-body d-flex flex-column text-muted small metagame-description">
     <app-markdown-text [data]="archetype.description"></app-markdown-text>
   </div>
   <div class="card-footer text-body-secondary small">
